# qt-stable-diffusion

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
QSdCpp/: CMakeLists.txt  QmlSdBackendManager.qml  QmlSdCacheParams.qml  QmlSdCtxParams.qml  QmlSdHiResParams.qml  QmlSdImgGenParams.qml  QmlSdPmParams.qml  QmlSdSampleParams.qml  QmlSdSlgParams.qml  TestZImage.qml  main.cpp  main.qml  property-macros.h  qmlstringlist.cpp  qsdaudio.cpp  qsdaudio.h  qsdbackenddevice.cpp  qsdbackenddevice.h  qsdbaseparam.h  qsdcacheparams.h  qsdctx.h  qsdctxparams.cpp  qsdctxparams.h  qsddownloader.cpp  qsddownloader.h  qsddownloaderparams.cpp  qsddownloaderparams.h  qsdembedding.h  qsdenums.h  qsdguidanceparams.cpp  qsdguidanceparams.h  qsdhiresparams.h  qsdimage.cpp  qsdimage.h  qsdimggenparams.cpp  qsdimggenparams.h  qsdlora.cpp  qsdlora.h  qsdpathing.cpp  qsdpathing.h  (+11 more)
QSdCpp/hf/: apiclient.cpp  apiclient.h  huggingfaceapi.h
cmake/: cmake_ggml_build_flags.cmake  cmake_llama_cpp_build_flags.cmake  cmake_nvidia.cmake  cmake_sd_cpp_build_flags.cmake
examples/: CMakeLists.txt
examples/qmlhf-example/: CMakeLists.txt  HFGet.qml  HFTrending.qml  main.cpp  main.qml
examples/qmlsd-example/: CMakeLists.txt  SDThree.qml  SDThreeMedium.qml  ZImageTurbo.qml  main.cpp  main.qml
examples/qmlsodium-example/: CMakeLists.txt  CryptoSigner.qml  HashView.qml  KeyManager.qml  PasswodUtils.qml  SecureBox.qml  main.cpp  main.qml
examples/qsodium-example/: CMakeLists.txt  main.cpp
qggml/: CMakeLists.txt  qggmldevice.cpp  qggmldevice.h
qhf/: CMakeLists.txt  apiclient.h  huggingfaceapi.cpp  huggingfaceapi.h  huggingfacecache.cpp  huggingfacecache.h  huggingfacedownloader.cpp  huggingfacedownloader.h  huggingfacefilemanifest.cpp  huggingfacefilemanifest.h  huggingfacehub.cpp  huggingfacehub.h  huggingfacepackagemanifest.cpp  huggingfacepackagemanifest.h  huggingfacerepoinfo.cpp  huggingfacerepoinfo.h  huggingfaceuser.cpp  huggingfaceuser.h  huggingfaceusermanager.cpp  huggingfaceusermanager.h
qsd/: CMakeLists.txt  QmlSdEmbedding.qml  QmlSdGuidanceParams.qml  QmlSdLora.qml  QmlSdTilingParams.qml  qsdaudio.h  qsdbaseparam.cpp  qsdbaseparam.h  qsdcacheparams.cpp  qsdcacheparams.h  qsdctx.cpp  qsdctx.h  qsdctxparams.cpp  qsdctxparams.h  qsdembedding.cpp  qsdembedding.h  qsdenums.cpp  qsdenums.h  qsdguidanceparams.h  qsdhiresparams.cpp  qsdhiresparams.h  qsdimage.h  qsdimggenparams.h  qsdpmparams.h  qsdsampleparams.cpp  qsdsampleparams.h  qsdslgparams.h  qsdtilingparams.cpp  qsdtilingparams.h  qsdupscaleparams.cpp  qsdvidgenparams.h
qsdutils/: CMakeLists.txt  property-macros.h  qmlstringlist.h  qsdpath.cpp  qsdpath.h  qsdpathing.h  qsdutils.cpp  qsdutils.h
qsodium/: CMakeLists.txt  qextrarandom.h  qsecuremem.cpp  qsecuremem.h  qsodium.cpp  qsodium.h  qsodiumcryptosign.cpp  qsodiumcryptosign.h  qsodiumhash.cpp  qsodiumhash.h  qsodiuminit.cpp  qsodiuminit.h  qsodiumkeys.cpp  qsodiumkeys.h  qsodiumpasswordutils.cpp  qsodiumpasswordutils.h  qsodiumsecretbox.cpp  qsodiumsecretbox.h
qtdeclarative-sodium/: CMakeLists.txt  SecureTextField.qml  qmlsodiumbox.cpp  qmlsodiumbox.h  qmlsodiumcryptosign.cpp  qmlsodiumcryptosign.h  qmlsodiumhash.cpp  qmlsodiumhash.h  qmlsodiumkeys.cpp  qmlsodiumkeys.h  qmlsodiumpasswordutils.cpp  qmlsodiumpasswordutils.h
